k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vincent-portfolio
  labels:
    name: vincent-portfolio
    environment: production
    owner: vincent-umeokoli
    app: flask-portfolio
